# api/app/Http/Schemas/StreamingNowSchema.php
@@ -19,3 +19,17 @@ class StreamingNowSchema{}
  */
 
  class StreamingNowResponse{}
+ 
+
+/**
+ * @OA\Schema(
+ *      schema="StreamingNowRequest",
+ *      type="object",
+ *      @OA\Property(property="show", type="integer"),
+ *      @OA\Property(property="type", type="string"),
+ *      @OA\Property(property="date_streaming", type="string"),
+ *      @OA\Property(property="start_streaming", type="string"),
+ *      @OA\Property(property="end_streaming", type="string"),
+ * ),
+ */
+ class SteamingNowRequest{}
